# maw

./: LICENSE  fourmolu.yaml  maw.cabal
src-exe/: Feeder.hs  Main.hs
src-lib/Maw/: Command.hs  Feeder.hs  Main.hs
test/: Main.hs
test/Maw/: CommandSpec.hs
